--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ nav{
     width:65%;
 }
 .main2{
-    width:98.25%
+    width:97.5%
 }
 section{
     height:2em;
@@ -77,6 +77,8 @@ article{
     height:100em;
     width:100%;
     margin:0;
+    padding-top:1em;
+    padding-left:1em;
     background-color:#f3f1f1;
     position:relative;
     top:1.5em;
