--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,41 @@ body{
     margin:0;
 }
 h1{
+    margin-top:0.75em;
     font-size:2em;
+    font-family: 'Merriweather', serif;
 }
 h2{
     margin:0;
     font-size:1.8em;
+    font-family: 'Merriweather', serif;
 }
 h3{
     margin:0;
     font-size:1.6;
+    font-family: 'Merriweather', serif;
 }
 p{
     margin:0;
+    font-family: 'Roboto Slab', serif;
 }
 a{
     color:#000;
     text-decoration-line:underline;
+    font-family: 'Roboto Slab', serif;
+}
+.footera{
+    position:relative;
+    left:-9em;
+    top:1em;
+}
+.logoheader{
+    height:6.25em;
+    width:17em;
+}
+.logofooter{
+    height:3em;
+    width:9em;
 }
 .full{
     width:100%;
@@ -85,34 +104,28 @@ article{
     left:1em;
 }
 aside{
-    height:100em;
+    height:101em;
     width:32.5%;
     box-sizing:border-box;
     padding:0.3em;
     background-color:#bebebe;
     position:absolute;
-    top:17.2em;
+    top:17.75em;
     left:75em;
 }
 footer{
-    height:3em;
+    height:5em;
     background-color:#a3a3a3;
+    background-image:linear-gradient(to right, #c2c2c2, #474646);
     position:relative;
-    top:3em;
-}
-.logoheader{
-    height:6.25em;
-    width:17em;
-}
-.logofooter{
-    height:3em;
-    width:9em;
+    top:2em;
 }
 .media{
     height:3em;
     width:3em;
     border-radius:30em;
     position:relative;
-    left:100em;
+    top:1em;
+    left:89.5em;
     display:inline-block;
 }
