--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,11 @@ a{
     margin:0;
 }
 header{
+    height:33em;
     font-size:1.5em;
     color:#000;
     position:relative;
-    top:0;
+    top:0em;
 }
 nav{
     height:6.25em;
@@ -58,7 +59,7 @@ nav{
 }
 .anav{
     color:#000000;
-    text-decoration-line:none;
+    text-decoration:none;
 }
 .navbar{
     height:5em;
@@ -73,10 +74,9 @@ nav{
     height:100%;
     background-color:#8f8f8f;
 }
-.break{
-    height:2em;
+.heroimage{
     width:100%;
-    background-color:#fff;
+    position:relative;
 }
 .main{
     width:65%;
@@ -110,7 +110,7 @@ aside{
     padding:0.3em;
     background-color:#bebebe;
     position:absolute;
-    top:17.75em;
+    top:59.25em;
     left:75em;
 }
 footer{
