--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,17 @@ nav{
     width:100%;
     position:relative;
 }
+.herotext{
+    margin:0;
+    font-size:5em;
+    color:#eeeded;
+    border-bottom:solid;
+    border-width:0.2em;
+    border-color:#eeeded;
+    position:absolute;
+    top:2.5em;
+    left:2.75em;
+}
 .main{
     width:65%;
 }
